--- a/Our.html
+++ b/Our.html
@@ -25,6 +25,13 @@
 
 <body>
 
+    <div class="m-TD">
+        <ul>
+            <li><a title="回顶部" id="GoToTop" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-up"></i><span class="menuItemInfo">回顶部</span></a></li>
+            <li><a title="到底部" id="GoToBottom" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-down"></i><span class="menuItemInfo">到底部</span></a></li>
+        </ul>
+    </div>
+
 	<header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
@@ -218,7 +225,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="" class="foregoerABtn foregoerABtn2">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn1 foregoerABtn1hover">
                           点亮淘宝路
                       </a>
                   </div>
@@ -245,7 +252,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="" class="foregoerABtn foregoerABtn1">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn2 ">
                           中国质造
                       </a>
                   </div>
@@ -272,7 +279,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="" class="foregoerABtn foregoerABtn3">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn3 ">
                           无线新营销
                       </a>
                   </div>
@@ -299,7 +306,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="" class="foregoerABtn foregoerABtn4">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn4 ">
                           双十一大会
                       </a>
                   </div>
@@ -326,7 +333,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="" class="foregoerABtn foregoerABtn5">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn5 ">
                           生意参谋发布会
                       </a>
                   </div>
@@ -796,7 +803,7 @@
                 </div>
                 <div class="CoachItemIntroTextCon">
                   <p class="CoachName">暮黎</p>
-                  <p class="CoachPosition">炬鼎力特聘讲师</p>
+                  <p class="CoachPosition">卖盟学堂教练</p>
                 </div>
               </div>
           </div>
@@ -810,7 +817,7 @@
                 </div>
                 <div class="CoachItemIntroTextCon">
                   <p class="CoachName">夜澜</p>
-                  <p class="CoachPosition">炬鼎力特聘讲师</p>
+                  <p class="CoachPosition">卖盟学堂教练</p>
                 </div>
               </div>
           </div>
@@ -982,7 +989,7 @@
             </ul>
 
             <p class="judgeBtnCon">
-              <a href="javascript:void(0)" class="judgeBtn jb1">
+              <a href="http://www10.53kf.com/webCompany.php?arg=10097681&style=1" target="_blank" class="judgeBtn jb1">
                 报名诊断
               </a>
             </p>
@@ -1006,7 +1013,7 @@
             </ul>
 
             <p class="judgeBtnCon">
-              <a href="javascript:void(0)" class="judgeBtn jb2">
+              <a href="http://www10.53kf.com/webCompany.php?arg=10097681&style=1" target="_blank" class="judgeBtn jb2">
                 报名诊断
               </a>
             </p>
@@ -1034,7 +1041,7 @@
             </ul>
 
             <p class="judgeBtnCon">
-              <a href="javascript:void(0)" class="judgeBtn jb3">
+              <a href="http://www10.53kf.com/webCompany.php?arg=10097681&style=1" target="_blank" class="judgeBtn jb3">
                 报名诊断
               </a>
             </p>
@@ -1058,7 +1065,7 @@
             </ul>
 
             <p class="judgeBtnCon">
-              <a href="javascript:void(0)" class="judgeBtn jb4">
+              <a href="http://www10.53kf.com/webCompany.php?arg=10097681&style=1" target="_blank" class="judgeBtn jb4">
                 报名诊断
               </a>
             </p>
@@ -1103,7 +1110,7 @@
           </div>
 
           <div class="publicBtnCon">
-            <img src="images/our/publicBottomBtn.png" class="publicBtnImg" />
+            <img src="images/our/publicBottomBtn.png" class="publicBtnImg gotoKefuBtn" />
           </div>
 
        </div>
@@ -1173,7 +1180,7 @@
                 </div>
 
                 <div class="QcodeBtnCon">
-                    <img src="images/our/contactus.png" class="contactUsImg" />
+                    <img src="images/our/contactus.png" class="contactUsImg gotoKefuBtn" />
                 </div>
               </div>
 
@@ -1198,6 +1205,10 @@
         <embed   src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/51834337.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true" type="application/x-shockwave-flash"></embed>
       </div>
   </div>
+
+    <div class='main-footer'>
+  </div>
+
 
 </body>
 </html>
