--- a/borken.html
+++ b/borken.html
@@ -25,6 +25,13 @@
 
 <body>
 
+	  <div class="m-TD">
+        <ul>
+            <li><a title="回顶部" id="GoToTop" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-up"></i><span class="menuItemInfo">回顶部</span></a></li>
+            <li><a title="到底部" id="GoToBottom" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-down"></i><span class="menuItemInfo">到底部</span></a></li>
+        </ul>
+    </div>
+
 	<header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
@@ -127,7 +134,7 @@
 			</div>
 		</div>
 
-		<img src="images/broken/anniu1.png" class="anniu1Img" />
+		<img src="images/broken/anniu1.png" class="anniu1Img gotoKefuBtn" />
 
 	</div>
 	
@@ -138,7 +145,7 @@
 
 		<img src="images/broken/youshi.png" class="youshiImg" />
 
-		<img src="images/broken/anniu2.png" class="anniu2Img" />		
+		<img src="images/broken/anniu2.png" class="anniu2Img gotoKefuBtn" />		
 		
 	</div>
 
@@ -152,7 +159,7 @@
 			</P>
 		</div>
 
-		<img src="images/broken/sanjiao.png" class="brokenGapImg" />
+		<img src="images/broken/sanjiao.png" class="brokenGapImg " />
 	</div>
 
 	<!--任务-->
@@ -163,7 +170,7 @@
 				<li class="taskLi">
 					<div class="taskItemTop">明<br/>任<br/>务	</div>
 					<div class="taskItemContentCon taskMoreT">
-						<p class="taskItemContentT">标准化实操作业体系，每天布置任务，奖惩分明强力保落地</p>
+						<p class="taskItemContentT">标准化实操作业体系，每天布置任务，按模块输出38张表格，强力保证落地</p>
 						<div class="taskItemImgCon">
 							<img src="images/broken/day1.png" class="taskItemimg" />
 							<img src="images/broken/day2.png" class="taskItemimg" />
@@ -178,7 +185,7 @@
 				<li class="taskLi">
 					<div class="taskItemTop">强<br/>执<br/>行</div>
 					<div class="taskItemContentCon">
-						<p class="taskItemContentT">按模块输入36张电商运营表格，你收获的是一整套电商运营体系</p>
+						<p class="taskItemContentT">7个维度，126个知识点，你收获的将是一整套电商运营体系</p>
 						<div class="taskItemImgCon">
 							<img src="images/broken/qiangzhixing.png" class="qiangzhixingImg" />
 						</div>
@@ -211,7 +218,7 @@
 			</ul>
 
 			<div class="taskbottomCon">
-				<img src="images/broken/anniu4.png" class="taskbottomImg" />
+				<img src="images/broken/anniu4.png" class="taskbottomImg gotoKefuBtn" />
 			</div>
 
 		</div>
@@ -541,10 +548,10 @@
 	 <div class="teacherGapCon">
 		<div class="brokenGapTextCon">
 			<p>				
-				<span class="brokenGapTextF">实力电商操盘&nbsp;&nbsp;</span>
+				<span class="brokenGapTextF specialGapTextS">实力电商操盘</span>
 			</p>
 			<p>
-				<span class="teacherGapTextS">&nbsp;&nbsp;讲师授课</span>
+				<span class="teacherGapTextS ">讲师授课</span>
 			</P>
 		</div>
 
@@ -689,6 +696,7 @@
 					<div class="teacherCoachItem">
 						<div class="teacherCoachItemImgCon">
 							<img src="images/broken/coachchangle.png" class="teacherCoachItemImg" />
+							<div class="teacherCoachItemImgShadow"></div>
 						</div>
 
 						<div class="teacherCoachName">
@@ -703,6 +711,7 @@
 					<div class="teacherCoachItem">
 						<div class="teacherCoachItemImgCon">
 							<img src="images/broken/coachdamo.png" class="teacherCoachItemImg" />
+							<div class="teacherCoachItemImgShadow"></div>
 						</div>
 
 						<div class="teacherCoachName">
@@ -717,6 +726,7 @@
 					<div class="teacherCoachItem">
 						<div class="teacherCoachItemImgCon">
 							<img src="images/broken/coachxinhe.png" class="teacherCoachItemImg" />
+							<div class="teacherCoachItemImgShadow"></div>
 						</div>
 
 						<div class="teacherCoachName">
@@ -731,27 +741,28 @@
 					<div class="teacherCoachItem">
 						<div class="teacherCoachItemImgCon">
 							<img src="images/broken/coachmuli.png" class="teacherCoachItemImg" />
+							<div class="teacherCoachItemImgShadow"></div>
 						</div>
 
 						<div class="teacherCoachName">
 							暮 黎
 						</div>
 						<div class="teacherCoachIntro">
-							<p>卖盟学堂总教练</p>
+							<p>卖盟学堂教练</p>
 						</div>
 					</div>
 
 					<div class="teacherCoachItem">
 						<div class="teacherCoachItemImgCon">
 							<img src="images/broken/coachyelan.png" class="teacherCoachItemImg" />
-							<div class="teacherItemImgShadow"></div>
+							<div class="teacherCoachItemImgShadow"></div>
 						</div>
 
 						<div class="teacherCoachName">
 							夜 澜
 						</div>
 						<div class="teacherCoachIntro">
-							<p>卖盟学堂</p>
+							<p>卖盟学堂教练</p>
 						</div>
 					</div>
 				</div>
@@ -1051,7 +1062,7 @@
 										<p class="qcodePhone">180&nbsp;2578&nbsp;0095</p>			
 										<p class="qcodeTextS">欢迎骚扰我!</p>
 										<p class="qcodeContact">
-											<img src="images/broken/contactme.png" class="qcodeContactImg" />
+											<img src="images/broken/contactme.png" class="qcodeContactImg gotoKefuBtn" />
 										</p>
 									</div>
 								</div>
@@ -1062,6 +1073,8 @@
 
 </div> 
 
+  <div class='main-footer'>
+  </div>
 
 </body>
 
