--- a/fuhua.html
+++ b/fuhua.html
@@ -23,7 +23,12 @@
 
 </head>
 <body>
-
+    <div class="m-TD">
+        <ul>
+            <li><a title="回顶部" id="GoToTop" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-up"></i><span class="menuItemInfo">回顶部</span></a></li>
+            <li><a title="到底部" id="GoToBottom" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-down"></i><span class="menuItemInfo">到底部</span></a></li>
+        </ul>
+    </div>
 
   <header class="header">
     <div class="fixedWidth LogoT">
@@ -101,7 +106,7 @@
         </div>
 
         <div class="thosBtnCon">
-          <img src="images/fuhua/thoseYearBtn.png" class="thoseBtn" />
+          <img src="images/fuhua/thoseYearBtn.png" class="thoseBtn gotoKefuBtn" />
         </div>
     </div>
   </div>
@@ -171,7 +176,7 @@
 
             </div>
             <div class="fourhaveBtnCon">
-                <img src="images/fuhua/fouritemBtn.png" class="fourHaveBtn" />
+                <img src="images/fuhua/fouritemBtn.png" class="fourHaveBtn gotoKefuBtn" />
             </div>
       </div>
   </div>
@@ -185,7 +190,7 @@
           </div>
 
           <div class="faceQuesSecondTitle">
-              <p>传统的学生模式已经无法满足需求</p>
+              <p>传统的学习模式已经无法满足需求</p>
               <p>你需要的是</p>
           </div>
 
@@ -224,6 +229,20 @@
               
               <div class="sbcon2 sbContentItem">
                   <div class="sbContentTitleImgCon">
+                    <img src="images/fuhua/sbimg3.png" class=" singleBrokenContentImg"/>
+                  </div>
+                  <div class="sbContentItemTextCon">
+                    <div class="sbContentTextBefore">
+                        <img src="images/sell/singleBrokentraingle.png" class="sbTextBeforeImg" />
+                    </div>
+                    <div class="sbContentText">                        
+                        30天教练持续跟进，提升方案执行效率，保证知识点完全掌握，每月集中复盘保证执行落地。
+                    </div>
+                  </div>
+              </div>
+
+              <div class="sbcon3 sbContentItem">
+                  <div class="sbContentTitleImgCon">
                     <img src="images/fuhua/sbimg2.png" class=" singleBrokenContentImg"/>
                   </div>
                   <div class="sbContentItemTextCon">
@@ -232,20 +251,6 @@
                     </div>
                     <div class="sbContentText">
                         针对店铺产品类型特点，输出属于你店铺的爆款打造方案，教给你一套店铺赚钱套路。
-                    </div>
-                  </div>
-              </div>
-
-              <div class="sbcon3 sbContentItem">
-                  <div class="sbContentTitleImgCon">
-                    <img src="images/fuhua/sbimg3.png" class=" singleBrokenContentImg"/>
-                  </div>
-                  <div class="sbContentItemTextCon">
-                    <div class="sbContentTextBefore">
-                        <img src="images/sell/singleBrokentraingle.png" class="sbTextBeforeImg" />
-                    </div>
-                    <div class="sbContentText">
-                        30天教练持续跟进，提升方案执行效率，保证知识点完全掌握，每月集中复盘保证执行落地。
                     </div>
                   </div>
               </div>
@@ -286,7 +291,7 @@
           </div>
 
           <div class="singleBrokenBtnCon">
-            <img src="images/fuhua/talktocoach.png" class="singleBrokenBtn"/>
+            <img src="images/fuhua/talktocoach.png" class="singleBrokenBtn gotoKefuBtn"/>
           </div>
 
       </div>
@@ -306,7 +311,7 @@
           </div>
 
           <div class="processBtnCon">
-            <img src="images/fuhua/processBtn.png" class="processBtnImg"/>
+            <img src="images/fuhua/processBtn.png" class="processBtnImg gotoKefuBtn"/>
           </div>
 
       </div>
@@ -415,7 +420,7 @@
                         </div>
 
                         <div class="coachBtnCon">
-                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg" />
+                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg gotoKefuBtn" />
                         </div>
                     </div>
                 </div>
@@ -446,7 +451,7 @@
                         </div>
 
                         <div class="coachBtnCon">
-                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg" />
+                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg gotoKefuBtn" />
                         </div>
                     </div>
                 </div>
@@ -476,7 +481,7 @@
                         </div>
 
                         <div class="coachBtnCon">
-                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg" />
+                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg gotoKefuBtn" />
                         </div>
                     </div>
                 </div>
@@ -503,7 +508,7 @@
                         </div>
 
                         <div class="coachBtnCon">
-                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg" />
+                            <img src="images/fuhua/coachBtn.png" class="coachBtnImg gotoKefuBtn" />
                         </div>
                     </div>
                 </div>
@@ -852,7 +857,7 @@
                     <p class="qcodePhone">180&nbsp;2578&nbsp;0095</p>     
                     <p class="qcodeTextS">欢迎骚扰我!</p>
                     <p class="qcodeContact">
-                      <img src="images/fuhua/contactme.png" class="qcodeContactImg" />
+                      <img src="images/fuhua/contactme.png" class="qcodeContactImg gotoKefuBtn" />
                     </p>
                   </div>
                 </div>
@@ -860,6 +865,10 @@
         </div>
     </div>
   </div>
+
+  <div class='main-footer'>
+  </div>
+
 
 </body>
 </html>
