--- a/sell.html
+++ b/sell.html
@@ -25,6 +25,13 @@
 
 <body>
 
+  <div class="m-TD">
+        <ul>
+            <li><a title="回顶部" id="GoToTop" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-up"></i><span class="menuItemInfo">回顶部</span></a></li>
+            <li><a title="到底部" id="GoToBottom" href="javascript:void(0)"><i class="fa fa-fw fa-arrow-down"></i><span class="menuItemInfo">到底部</span></a></li>
+        </ul>
+    </div>
+
   <header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
@@ -150,7 +157,7 @@
       <div class="fixedWidth baner5Inner">
 
          <div class="reportD">
-          <img src="images/sell/reportBtn.png" class="reportBtn" />
+          <img src="images/sell/reportBtn.png" class="reportBtn gotoKefuBtn" />
         </div>
 
         <div class="imgCenterType">
@@ -903,7 +910,7 @@
 
 
                 <div class="dakaIntroCon">
-                  <table class="dakaIntroTable hidden">
+                  <table class="dakaIntroTable ">
                     <tr>
                         <td>
                           <div class="dakaTeacherImgCon ">
@@ -928,7 +935,7 @@
                     </tr>
                   </table>
 
-                  <table class="dakaIntroTable ">
+                  <table class="dakaIntroTable hidden">
                     <tr>
                         <td>
                           <div class="dakaTeacherImgCon">
@@ -996,7 +1003,7 @@
                 </div>
             </div>
             <div class="teachercommituCon">
-                <img src="images/sell/dakabtn.png" class="teacherCommon" />
+                <img src="images/sell/dakabtn.png" class="teacherCommon gotoKefuBtn" />
             </div>
       </div>
   </div>
@@ -1012,7 +1019,96 @@
               为大促保驾护航
           </div> -->
 
-          <div class="coachItemCon">
+          <div class="coachNewItemCon">
+
+              <div class="coachNewItem">
+                  <div class="coachTeacherHeadImgCon">
+                      <img src="images/sell/05长乐.png" class="coiachTeacherHeadImg" />
+                      <div class="coachTeacherHeadShadow"></div>
+                  </div>
+
+                  <div class="coachNewItemIntroCon">  
+                        <p>5年电商实操经验；</p>
+                      <p>炬鼎力破茧总教练；</p>
+                      <p>私家顾问教练；</p>
+                      <p>双十一单日销售额300w;</p>
+                       <p>双十二单日销售150W。</p>
+                      <p>擅长店铺运营、SEO搜索、活动策划。</p>
+                  </div>
+                  <div class="coachNewItemName">
+                      长乐
+                  </div>
+              </div>
+
+               <div class="coachNewItem">
+                  <div class="coachTeacherHeadImgCon">
+                      <img src="images/sell/01大漠.png" class="coiachTeacherHeadImg" />
+                      <div class="coachTeacherHeadShadow"></div>
+                  </div>
+
+                  <div class="coachNewItemIntroCon">  
+                       <p>担任炬鼎力破茧\孵化课程教练；</p>
+                      <p>私人顾问教练；5年电商实战经验;</p>
+                      <p>曾操盘新品14天免费流量破20000，单店日销售额250000；</p>
+                      <p>擅长店铺运营、SEO搜索、活动策划。</p>
+                  </div>
+                  <div class="coachNewItemName">
+                      大漠
+                  </div>
+              </div>
+
+              <div class="coachNewItem">
+                  <div class="coachTeacherHeadImgCon">
+                      <img src="images/sell/02星河.png" class="coiachTeacherHeadImg" />
+                      <div class="coachTeacherHeadShadow"></div>
+                  </div>
+
+                  <div class="coachNewItemIntroCon">  
+                      <p>炬鼎力破茧教练；炬鼎力私家顾问教练；</p>
+                      <p>擅长直通车计划规划，数据分析；</p>
+                      <p>利用直通车推动单品7天搜索流量上千。</p>
+                  </div>
+                  <div class="coachNewItemName">
+                      星河
+                  </div>
+              </div>
+
+              <div class="coachNewItem">
+                  <div class="coachTeacherHeadImgCon">
+                      <img src="images/sell/04夜澜.png" class="coiachTeacherHeadImg" />
+                      <div class="coachTeacherHeadShadow"></div>
+                  </div>
+
+                  <div class="coachNewItemIntroCon">  
+                      <p>三年电商实操运营经验； </p>
+                      <p>擅长店铺活动策划、无线个性化流量玩法、微淘以及淘宝客运用； </p>
+                      <p>涉及类目：家装家饰、服饰鞋包、鲜花园艺、厨房家电、女装等。</p>
+                  </div>
+                  <div class="coachNewItemName">
+                      夜  澜
+                  </div>
+              </div>
+
+              <div class="coachNewItem">
+                  <div class="coachTeacherHeadImgCon">
+                      <img src="images/sell/03暮黎.png" class="coiachTeacherHeadImg" />
+                      <div class="coachTeacherHeadShadow"></div>
+                  </div>
+
+                  <div class="coachNewItemIntroCon">  
+                      <p>卖盟学堂教练；</p>
+                      <p>操作男装、灯饰、家具类目四天搜索破千；</p>
+                      <p>擅长SEO，数据化运营。</p>
+                  </div>
+                  <div class="coachNewItemName">
+                      暮黎
+                  </div>
+              </div>
+
+
+          </div>
+
+          <!-- <div class="coachItemCon">
               <div class="coachItem">
                   <div class="coachItemIntroCon">
                     <p>5年电商实操经验；</p>
@@ -1076,7 +1172,7 @@
                       暮  黎
                   </div>
               </div>
-          </div>
+          </div> -->
       </div>
   </div>
 
@@ -1098,7 +1194,7 @@
                 </div>
 
                 <div class="learnPlanMidBtnCon">
-                    <img src="images/sell/learnPlanBtn.png" class="learnBtnImg" />
+                    <img src="images/sell/learnPlanBtn.png" class="learnBtnImg gotoKefuBtn" />
                 </div>
 
             </div>
@@ -1180,12 +1276,12 @@
                   欢迎骚扰哦！
                  </div>
                  <div class="ContactCon">
-                    <img src="images/sell/contactus.png" class="ContactImg"/>
+                    <img src="images/sell/contactus.png" class="ContactImg gotoKefuBtn"/>
                  </div>
             </div>
         </div>
 
-        <div class="reportContentBottomCon">
+       <!--  <div class="reportContentBottomCon">
             <div class="reportBottomF">
               2017如果您还没有合适的CRM或ERP，炬鼎力帮您出钱！
             </div>
@@ -1202,10 +1298,14 @@
                 <p>1、数云福利：仅针对单独购买聚星云-客户运营平台数云定制版（即B版），原价10000元/店，现价5000元/店； </p>
                 <p>2、聚水潭福利：免费获得聚水潭ERP专业版（售价5888元/年），但聚水潭不提供上门培训实施服务。</p>
             </div>
-        </div>
+        </div> -->
 
     </div>
   </div>
+
+    <div class='main-footer'>
+  </div>
+
 
 </body>
 
