--- a/Our.html
+++ b/Our.html
@@ -252,7 +252,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn2 ">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn2 foregoerABtn2hover">
                           中国质造
                       </a>
                   </div>
@@ -279,7 +279,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn3 ">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn3  foregoerABtn3hover">
                           无线新营销
                       </a>
                   </div>
@@ -306,7 +306,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn4 ">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn4 foregoerABtn4hover">
                           双十一大会
                       </a>
                   </div>
@@ -333,7 +333,7 @@
 
             <div class="foregoerItemCon">
                   <div class="forgoerHoverDiv">
-                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn5 ">
+                      <a href="javascript:void(0)" class="foregoerABtn foregoerABtn5 foregoerABtn5hover">
                           生意参谋发布会
                       </a>
                   </div>
@@ -767,59 +767,54 @@
   <div class="CoachCon">
      <div class="CoachContent fixedWidth">
           <div class="CoachItem">
-              <div class="coachItemHoverBlack hidden">
-              </div>
-              <img src="images/our/01大漠.png" class="CoachItemImg" />
-              <div class="CoachItemIntroCon">
-                <div class="CoachItemIntroBack">
-                </div>
-                <div class="CoachItemIntroTextCon">
+              <div class="coachItemHeadImgCon">
+                  <div class="coachItemHoverBlack hidden">
+                  </div>
+                  <img src="images/our/01大漠.png" class="CoachItemImg" />
+              </div>            
+              
+               <div class="CoachItemIntroTextCon">
                   <p class="CoachName">大漠</p>
                   <p class="CoachPosition">炬鼎力特聘讲师</p>
-                </div>
-              </div>
+               </div>
           </div>
 
           <div class="CoachItem">
-             <div class="coachItemHoverBlack hidden">
+
+              <div class="coachItemHeadImgCon">
+                  <div class="coachItemHoverBlack hidden"></div>
+                  <img src="images/our/02星河.png" class="CoachItemImg" />
               </div>
-              <img src="images/our/02星河.png" class="CoachItemImg" />
-              <div class="CoachItemIntroCon">
-                <div class="CoachItemIntroBack">
-                </div>
-                <div class="CoachItemIntroTextCon">
-                  <p class="CoachName">星河</p>
-                  <p class="CoachPosition">炬鼎力特聘讲师</p>
-                </div>
-              </div>
+
+                  <div class="CoachItemIntroTextCon">
+                      <p class="CoachName">星河</p>
+                      <p class="CoachPosition">炬鼎力特聘讲师</p>
+                  </div>
           </div>
 
           <div class="CoachItem">
-               <div class="coachItemHoverBlack hidden">
-              </div>
-              <img src="images/our/03暮黎.png" class="CoachItemImg" />
-              <div class="CoachItemIntroCon">
-                <div class="CoachItemIntroBack">
+                <div class="coachItemHeadImgCon">
+                    <div class="coachItemHoverBlack hidden">
+                    </div>
+                    <img src="images/our/03暮黎.png" class="CoachItemImg" />
                 </div>
-                <div class="CoachItemIntroTextCon">
-                  <p class="CoachName">暮黎</p>
-                  <p class="CoachPosition">卖盟学堂教练</p>
+
+                    <div class="CoachItemIntroTextCon">
+                    <p class="CoachName">暮黎</p>
+                    <p class="CoachPosition">卖盟学堂教练</p>
                 </div>
-              </div>
           </div>
 
           <div class="CoachItem">
-              <div class="coachItemHoverBlack hidden">
+              <div class="coachItemHeadImgCon">
+                    <div class="coachItemHoverBlack hidden"></div>
+                    <img src="images/our/04夜澜.png" class="CoachItemImg" />
               </div>
-              <img src="images/our/04夜澜.png" class="CoachItemImg" />
-              <div class="CoachItemIntroCon">
-                <div class="CoachItemIntroBack">
-                </div>
+             
                 <div class="CoachItemIntroTextCon">
                   <p class="CoachName">夜澜</p>
                   <p class="CoachPosition">卖盟学堂教练</p>
                 </div>
-              </div>
           </div>
      </div>
   </div>
@@ -974,16 +969,16 @@
             </div>
 
             <ul class="judgeFourUl jful1">
-              <li>
+              <li class="jfli1">
                 <span class="judgeFourText">标题优化诊断</span>
               </li>
-              <li>
+              <li class="jfli1">
                 <span class="judgeFourText">主图点击诊断</span>
               </li>
-              <li>
+              <li class="jfli1">
                 <span class="judgeFourText">手淘店铺结构诊断</span>
               </li>
-              <li>
+              <li class="jfli1">
                 <span class="judgeFourText">PC店铺结构诊断</span>
               </li>
             </ul>
@@ -1001,13 +996,13 @@
             </div>
 
             <ul class="judgeFourUl jful2">
-              <li>
+              <li class="jfli2">
                 <span class="judgeFourText">直通车诊断</span>
               </li>
-              <li>
+              <li class="jfli2">
                 <span class="judgeFourText">钻展诊断</span>
               </li>
-              <li>
+              <li class="jfli2">
                 <span class="judgeFourText">淘宝客诊断</span>
               </li>
             </ul>
@@ -1026,16 +1021,16 @@
             </div>
 
             <ul class="judgeFourUl jful3">
-              <li>
+              <li class="jfli3">
                 <span class="judgeFourText">静默转化诊断</span>
               </li>
-              <li>
+              <li class="jfli3">
                 <span class="judgeFourText">询单转化诊断</span>
               </li>
-              <li>
+              <li class="jfli3">
                 <span class="judgeFourText">关联营销诊断</span>
               </li>
-              <li>
+              <li class="jfli3">
                 <span class="judgeFourText">活动促销诊断</span>
               </li>
             </ul>
@@ -1053,13 +1048,13 @@
             </div>
 
             <ul class="judgeFourUl jful4">
-              <li>
+              <li class="jfli4">
                 <span class="judgeFourText">类目诊断</span>
               </li>
-              <li>
+              <li class="jfli4">
                 <span class="judgeFourText">单品诊断</span>
               </li>
-              <li>
+              <li class="jfli4">
                 <span class="judgeFourText">产品属性诊断</span>
               </li>
             </ul>
