--- a/borken.html
+++ b/borken.html
@@ -134,7 +134,7 @@
 			</div>
 		</div>
 
-		<img src="images/broken/anniu1.png" class="anniu1Img gotoKefuBtn" />
+		<!-- <img src="images/broken/anniu1.png" class="anniu1Img gotoKefuBtn" /> -->
 
 	</div>
 	
@@ -289,7 +289,7 @@
 								Day02
 							</div>
 							<div class="sixDayS">
-								数据化选品
+								直通车推广
 							</div>
 						</div>
 						<div class="hidetraingleD">
@@ -305,7 +305,7 @@
 								Day03
 							</div>
 							<div class="sixDayS">
-								数据化选品
+								视觉+钻展+搜索
 							</div>
 						</div>
 						<div class="hidetraingleD">
@@ -321,7 +321,7 @@
 								Day04
 							</div>
 							<div class="sixDayS">
-								数据化选品
+								活动+绩效
 							</div>
 						</div>
 						<div class="hidetraingleD">
@@ -353,7 +353,7 @@
 								Day06
 							</div>
 							<div class="sixDayS">
-								数据化选品
+								沙盘+店铺规划
 							</div>
 						</div>
 						<div class="hidetraingleD">
