--- a/Our.html
+++ b/Our.html
@@ -32,7 +32,7 @@
         </ul>
     </div>
 
-	<header class="header">
+  <header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
         <div class="LogoLeft ">          
@@ -92,7 +92,7 @@
           </ul>
     </div>
 
-	</header>
+  </header>
 
 
   <!--banner-->
@@ -137,7 +137,7 @@
   </div>
 
   <!--快狠准-->
-	<div class="fixedWidth quickContainer">
+  <div class="fixedWidth quickContainer">
 
       <div class="quickItemGroupCon">
           <div class="quickItemCon">
@@ -775,7 +775,8 @@
               
                <div class="CoachItemIntroTextCon">
                   <p class="CoachName">大漠</p>
-                  <p class="CoachPosition">炬鼎力特聘讲师</p>
+          <p class="CoachPosition">炬鼎力破茧\孵化课程教练</p>
+                  <p class="CoachPosition">私家顾问教练</p>
                </div>
           </div>
 
@@ -788,7 +789,8 @@
 
                   <div class="CoachItemIntroTextCon">
                       <p class="CoachName">星河</p>
-                      <p class="CoachPosition">炬鼎力特聘讲师</p>
+                      <p class="CoachPosition">炬鼎力破茧总教练</p>
+                  <p class="CoachPosition">炬鼎力私家顾问教练</p>
                   </div>
           </div>
 
@@ -802,6 +804,7 @@
                     <div class="CoachItemIntroTextCon">
                     <p class="CoachName">暮黎</p>
                     <p class="CoachPosition">卖盟学堂教练</p>
+          <p class="CoachPosition">&nbsp;</p>
                 </div>
           </div>
 
@@ -814,6 +817,7 @@
                 <div class="CoachItemIntroTextCon">
                   <p class="CoachName">夜澜</p>
                   <p class="CoachPosition">卖盟学堂教练</p>
+          <p class="CoachPosition">&nbsp;</p>
                 </div>
           </div>
      </div>
@@ -936,7 +940,7 @@
           </div>
       </div>
   </div>
-	
+  
 
 <!--诊断-->
   <div class="gapLineC">
