--- a/fuhua.html
+++ b/fuhua.html
@@ -668,20 +668,20 @@
           <div class="exampleVideoCon"> 
               <div class="exampleVideoItem">
                   <div class="videoShowImgCon" id="videoEleContainer">
-                     <embed  play="false"  flashvars="autoplay=false&play=false"  src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/61416493.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true" type="application/x-shockwave-flash"></embed>
+                     <embed  play="false"  flashvars="autoplay=false&play=false"  src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/34145542.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true" type="application/x-shockwave-flash"></embed>
                   </div>
 
                   <div class="videoIntro">
                       <div class="shopName"  id="videoShopName">
-                          三木贝贝亲子装店
+                          又壹点企业店
                       </div>
                       <div class="subTitleCon">
-                          类目:<span class="titleSpecial"  id="videoshopType">服装</span>
+                          类目:<span class="titleSpecial"  id="videoshopType">厨房/餐饮用具</span>
                       </div>
                       <div class="subTitleSec">
                           孵化后能力提升：
                           <div class="subTitleThree" id="videoshopAfter">
-                              听完课程之后意识到自己团队存在的问题，增加与同事的沟通。同时，对于品牌的定位、产品规划也更加的明确。
+                              让我们看清了整个行业，通过数据分析，能够把店铺问题完完全全的呈现。
                           </div>
                       </div>
 
