--- a/borken.html
+++ b/borken.html
@@ -21,9 +21,26 @@
   <script type="text/javascript" src="js/broken.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
 
+
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?81715133633c055f7a6b95026a4746d7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<script>(function() {var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10097681/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);})();
+</script>
+
 </head>
 
 <body>
+
+
+
 
 	  <div class="m-TD">
         <ul>
@@ -32,7 +49,7 @@
         </ul>
     </div>
 
-	<header class="header">
+  <header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
         <div class="LogoLeft ">          
@@ -67,23 +84,23 @@
     <div class="navTop">
           <ul class="nvavTopUl fixedWidth">
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?1" target="_blank" class="TopABtn">首页</a>
+              <a href="http://sz.pj.judingli.com?1" class="TopABtn">首页</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
+              <a href="http://sz.pj.judingli.com?2"  class="TopABtn">培训课程</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.fh.judingli.com?3" target="_blank" class="TopABtn">电商孵化</a>
+              <a href="http://sz.fh.judingli.com?3" class="TopABtn">电商孵化</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?4" target="_blank" class="TopABtn">双11特训营</a>
+              <a href="http://sz.11.judingli.com?4"  class="TopABtn">双11特训营</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.sl.judingli.com?5" target="_blank" class="TopABtn">实力保障</a>
+              <a href="http://sz.sl.judingli.com?5"  class="TopABtn">实力保障</a>
             </li>
 
             <li class="navTopLi">
@@ -92,7 +109,7 @@
           </ul>
     </div>
 
-	</header>
+  </header>
 
 	<!--banner-->	
 	<div class="bannerCon">
@@ -321,7 +338,7 @@
 								Day04
 							</div>
 							<div class="sixDayS">
-								活动+绩效
+								运营决策玩法解析
 							</div>
 						</div>
 						<div class="hidetraingleD">
@@ -337,7 +354,7 @@
 								Day05
 							</div>
 							<div class="sixDayS">
-								数据化选品
+								活动+绩效
 							</div>
 						</div>
 						<div class="hidetraingleD">
