--- a/sell.html
+++ b/sell.html
@@ -21,6 +21,19 @@
   <script type="text/javascript" src="js/sell.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
 
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?81715133633c055f7a6b95026a4746d7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<script>(function() {var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10097681/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);})();
+</script>
+
 </head>
 
 <body>
@@ -67,23 +80,23 @@
     <div class="navTop">
           <ul class="nvavTopUl fixedWidth">
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?1" target="_blank" class="TopABtn">首页</a>
+              <a href="http://sz.pj.judingli.com?1" class="TopABtn">首页</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
+              <a href="http://sz.pj.judingli.com?2"  class="TopABtn">培训课程</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.fh.judingli.com?3" target="_blank" class="TopABtn">电商孵化</a>
+              <a href="http://sz.fh.judingli.com?3" class="TopABtn">电商孵化</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?4" target="_blank" class="TopABtn">双11特训营</a>
+              <a href="http://sz.11.judingli.com?4"  class="TopABtn">双11特训营</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.sl.judingli.com?5" target="_blank" class="TopABtn">实力保障</a>
+              <a href="http://sz.sl.judingli.com?5"  class="TopABtn">实力保障</a>
             </li>
 
             <li class="navTopLi">
