--- a/borken.html
+++ b/borken.html
@@ -656,7 +656,7 @@ var _hmt = _hmt || [];
 							</div>
 
 							<div class="teacherItemIntro">
-								2009年进入电商行业，从事过电商各个核心岗位。操盘过的类目有灯饰、家具、女鞋、女包、饰品、电器；目前经验多家天猫商城；曾协助多家店铺，在数月内事项线上月交易额从0到数百万的突破；
+								2009年进入电商行业。操盘过的类目：灯饰、家具、女鞋、女包、饰品、电器；目前经营多家天猫店；曾协助多家店铺，在数月内实现月交易额从0到数百万的突破；
 							</div>
 						</div>
 					</div>
@@ -675,7 +675,7 @@ var _hmt = _hmt || [];
 							</div>
 
 							<div class="teacherItemIntro">
-								精通灯饰、家具、电器、服饰等类目，擅长群爆款布局和爆款极速打造，带领大量学员在1个月内打造出爆款，并实现店铺数十倍以上的业绩增长。指导了多个卖家短期内进入类目TOP10。
+								精通灯饰、家具、电器、服饰等类目，擅长群爆款布局和爆款极速打造，带领大量学员在1个月内打造出爆款，并实现店铺业绩数十倍以上的增长，指导的多个店铺短期内进入TOP10.
 							</div>
 						</div>
 					</div>
