--- a/fuhua.html
+++ b/fuhua.html
@@ -492,7 +492,7 @@ var _hmt = _hmt || [];
                         <div class="coachItemIntroCon">
                             <p>7年电商，视觉设计和运营经验，擅长精准用户营销与数据运营，</p>
                             <p>依据行业属性、产品特点、用户习惯，借助大数据展现视觉精准设计。</p>
-                            <p>与淘宝大学《无线课程》、《新营销》课程研发。</p>
+                            <p>参与淘宝大学《无线课程》、《新营销》课程研发。</p>
                         </div>
 
                         <div class="coachBtnCon">
@@ -519,7 +519,7 @@ var _hmt = _hmt || [];
                             <p>4年电商运营经验；炬鼎力孵化直通车教练；操盘多家童装、母婴、服饰箱包等类目店铺；
 实现直通车由亏损到盈利，单店月投放量过百万；</p>
                             <p>曾指导店铺一周时间直通车PPC由4元降至0.6元，ROI由1至3的提升；</p>
-                            <p>通过直通车单一推广方式最快纪录新品上架22天时间打造搜索流量小类目第一， 4个月时间从日销300到日销10万。</p>
+                            <p>通过直通车单一推广方式最快纪录：新品上架22天打造搜索流量小类目第一， 4个月时间从日销300到日销10万。</p>
                         </div>
 
                         <div class="coachBtnCon">
