--- a/sell.html
+++ b/sell.html
@@ -300,7 +300,7 @@ var _hmt = _hmt || [];
 
                 <div class="surperCourseContentCon">
                       <p class="surperContextItem"><span class="specialCircle"></span>运营推广评估</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>视觉客报工效评估</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>视觉客服工效评估</p>
                        <p class="surperContextItem"><span class="specialCircle"></span>仓储物流时效评估</p>
                 </div>
             </div>
@@ -368,7 +368,7 @@ var _hmt = _hmt || [];
 
                 <div class="surperCourseContentCon">
                       <p class="surperContextItem"><span class="specialCircle"></span>私域流量的聚散攻略</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>单品攻域流量的抢占技巧</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>单品公域流量的抢占技巧</p>
                       <p class="surperContextItem"><span class="specialCircle"></span>全域流量引爆全店</p>
                 </div>
 
@@ -990,7 +990,7 @@ var _hmt = _hmt || [];
 
                                      <p class="">万堂书院讲师，2012年万堂书院最受欢迎讲师，2013王者争霸优秀导师。  </p>
                                      <p>从事电商7年，自营21个店铺涉及12个类目。 </p>
-                                     <p> 自从09年第一年双11已经连续8年大促操盘。16年操盘店铺双11当天销售额过千万。 </p>
+                                     <p>从09年至今，连续操盘双11大促8年。16年操盘店铺双11当天销售额过千万。 </p>
                                    </div>
                                 </div>
                             </div>
